--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="action_help_main_title">Справка</string>
     <string name="save_data_in_file">Сохранить в файл</string>
     <string name="show_list_of_files">Список раскладок</string>
-    <string name="change_data">Изменить раскладку</string>
+    <string name="change_data">Редактировать раскладку</string>
     <string name="change_temp">Изменить темп </string>
 
     <string name="start_button">старт</string>
@@ -94,7 +94,9 @@
     <string name="Count">Количество:  </string>
     <string name="CountZeroTime">00:00</string>
     <string name="LowMinus">_</string>
-
+    <string name="DeleteYesNo">Удалить: Вы уверены?</string>
+    <string name="DeleteYes">Да</string>
+    <string name="DeleteNo">Нет</string>
 
 
 
