Сделал MainActivity через базу данных с первоначальной строкой и её выводом в лог 3-10-18               Сделал TimeMeterActivity и GrafActivity 5-10-18               сделал контекстные меню, вкладки, везде не до конца               Дальше надо редактирование расколадок и сохранение под новым именем               12-10-18               сделана newActivity для создания раскладки с кнопки + главного экрана               14-10-18               В общих чертах переход на SQLite сделан Остались мелочи               15-10-2018               Понял, что нужно редактирование делать на отдельном экране а не мешать               с темполидером Сделал это               20-10-18

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="action_timing">Отсечки</string>
     <string name="action_transfer">Загрузка отсечек в темполидер</string>
     <string name="action_help_main_title">Справка</string>
-    <string name="save_data_in_file">Сохранить в файл</string>
+    <string name="save_data_in_file">Сохранить раскладку как</string>
     <string name="show_list_of_files">Список раскладок</string>
     <string name="change_data">Редактировать раскладку</string>
     <string name="change_temp">Изменить темп </string>
