Сделал MainActivity через базу данных с первоначальной строкой и её выводом в лог 3-10-18               Сделал TimeMeterActivity и GrafActivity 5-10-18               сделал контекстные меню, вкладки, везде не до конца               Дальше надо редактирование расколадок и сохранение под новым именем               12-10-18               сделана newActivity для создания раскладки с кнопки + главного экрана               14-10-18               В общих чертах переход на SQLite сделан Остались мелочи               15-10-2018               Понял, что нужно редактирование делать на отдельном экране а не мешать               с темполидером Сделал это               Исправил дублирование MainActivity при нажатии стрелки Назад               20-10-18

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -72,8 +72,6 @@
     <string name="PaceMaker">Темполидер</string>
     <string name="ListOfTimeReps">Раскладки по темпу</string>
     <string name="Settings">Настройки</string>
-    <string name="Share">Share</string>
-    <string name="Send">Send</string>
     <string name="FileName">Имя раскладки  </string>
     <string name="FileNameInput">Введите имя</string>
     <string name="DelayOfStart">Задержка старта, сек   </string>
@@ -98,10 +96,7 @@
     <string name="DeleteYesNo">Удалить: Вы уверены?</string>
     <string name="DeleteYes">Да</string>
     <string name="DeleteNo">Нет</string>
-
-
-
-
-
+    <string name="Send">Оценить</string>
+    <string name="Share">Поделиться</string>
 
 </resources>
