07-12-18 Время отдыха сделано, запрет на удаление, изменение, перемещение автосохранений секундомера и темполидера

--- a/src/main/res/values-en/strings.xml
+++ b/src/main/res/values-en/strings.xml
@@ -87,4 +87,7 @@
     <string name="label_N">#</string>
     <string name="label_time">Time, s</string>
     <string name="label_lap">Lap, s</string>
+    <string name="textViewelay">Задержка, сек</string>
+    <string name="textViewDelay">Delay, sec</string>
+    <string name="textViewRestTime">Time Of Rest, sec</string>
 </resources>
