07-12-18 Время отдыха сделано, запрет на удаление, изменение, перемещение автосохранений секундомера и темполидера 10-12-18 сделал пиктограмму

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -132,5 +132,6 @@
     <string name="textViewDelay">Задержка, сек</string>
     <string name="textViewRestTime">Время отдыха</string>
     <string name="textViewTimeRemain">До старта, сек</string>
+    <string name="textViewelay">Задержка, сек</string>
 
 </resources>
