--- a/src/main/res/values-en/strings.xml
+++ b/src/main/res/values-en/strings.xml
@@ -91,4 +91,5 @@
     <string name="textViewRestTime">Time Of Rest, sec</string>
     <string name="textViewTimeRemain">Before start, sec</string>
     <string name="textViewelay">Delay, sec</string>
+    <string name="appDescription">Sets the pace of cycling exercises</string>
 </resources>
